--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -11,12 +11,39 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ID)
+        </dd>
+    </dl>
+    <dl class="row">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Capacity)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Capacity)
         </dd>
     </dl>
+    <dd class="col-sm-10">
+    <table class="table">
+        <tr>
+            <th>Resident Name</th>
+            <th>Resident house</th>
+        </tr>
+        @foreach (var item in Model.Residents)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HouseType)
+                </td>
+            </tr>
+        }
+    </table>
+</dd>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
